proc-macros/tests/ui/incorrect/method/method_ignored_arguments.stderr
error: Method argument names must be a valid Rust identifiers; got `_` instead
 --> $DIR/method_ignored_arguments.rs:6:2
  |
6 |     async fn a(&self, _: Vec<u8>);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
